--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,25 @@ a, a:hover {
         border-radius: 5px;
     }
 
+
+.alert-box {
+  width: 400px;
+  background: #444;
+  color: white;
+  position: fixed;
+  font-weight: bold;
+  bottom: 20px;
+  left: 20px;
+  z-index: 1000;
+  padding: 15px;
+  font-size: 15px;
+  text-transform: capitalize;
+  opacity: 0;
+  transform: translateY(100px);
+  transition: all 300ms;
+}
+
+.alert-box.show {
+  opacity: 1;
+  transform: translateY(0);
+}
